--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/mzaini30/andro.git"
+    "url": "git+https://github.com/taqwim36/ApkFast.git"
   },
   "keywords": [
     "android",
@@ -24,9 +24,9 @@
   "author": "Zen",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/mzaini30/andro/issues"
+    "url": "https://github.com/taqwim36/ApkFast/issues"
   },
-  "homepage": "https://github.com/mzaini30/andro#readme",
+  "homepage": "https://github.com/mzaini30/ApkFast#readme",
   "devDependencies": {
     "esbuild": "^0.16.17",
     "zx": "^7.0.7"
